--- a/sbapp/share/index.html
+++ b/sbapp/share/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<span class="logo">Sideband Repository</span>
+<span class="logo">Sideband Repo</span>
 <p><center><span class="menu"><a href="index.html">Start</a> | <a href="pkgs.html">Software</a> | <a href="guides.html">Guides</a></span></center></p><hr><h2>Hello!</h2>
 <table style="margin-bottom: 1.5em;">
 <tbody>
