Enabled Repository server on desktop. Added RNode Flasher to utilities. Added RNode firmware downloads to repository update action.

--- a/sbapp/share/guides.html
+++ b/sbapp/share/guides.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <span class="logo">Guides</span>
-<p><center><span class="menu"><a href="index.html">Start</a> | <a href="pkgs.html">Software</a> | <a href="guides.html">Guides</a></span></center></p><hr>
+<p><center><span class="menu"><a href="index.html">Start</a> | <a href="flasher.html">RNode Flasher</a> | <a href="pkgs.html">Software</a> | <a href="guides.html">Guides</a></span></center></p><hr><br/>
 Welcome to the <b>Guide Section</b>!<br/><br/>From here, you can browse or download various included manuals, documentation, references and guides.
 
 <ul>
@@ -19,6 +19,7 @@ Welcome to the <b>Guide Section</b>!<br/><br/>From here, you can browse or downl
   <li><a href="./mirrors/Reticulum_Manual.epub">Download the Reticulum Manual in EPUB format</a></li>
   <li><a href="./mirrors/reticulum.network/index.html">Browse a local copy of the Reticulum website</a></li>
 </ul>
+<br/>
 <hr>
 <p><center></p>
 </body></html>
