--- a/sbapp/share/index.html
+++ b/sbapp/share/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <span class="logo">Sideband Repo</span>
-<p><center><span class="menu"><a href="index.html">Start</a> | <a href="pkgs.html">Software</a> | <a href="guides.html">Guides</a></span></center></p><hr><h2>Hello!</h2>
+<p><center><span class="menu"><a href="index.html">Start</a> | <a href="flasher.html">RNode Flasher</a> | <a href="pkgs.html">Software</a> | <a href="guides.html">Guides</a></span></center></p><hr><h2>Hello!</h2>
 <table style="margin-bottom: 1.5em;">
 <tbody>
 <tr>
