--- a/sbapp/share/pkgs.html
+++ b/sbapp/share/pkgs.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <span class="logo">Software</span>
-<p><center><span class="menu"><a href="index.html">Start</a> | <a href="pkgs.html">Software</a> | <a href="guides.html">Guides</a></span></center></p><hr>
+<p><center><span class="menu"><a href="index.html">Start</a> | <a href="flasher.html">RNode Flasher</a> | <a href="pkgs.html">Software</a> | <a href="guides.html">Guides</a></span></center></p><hr><br/>
 Welcome to the <b>Software Library</b>!<br/><br/>From here, you can download installable Python Wheel packages of Reticulum and various other auxillary programs and utilities.
 <ul id="filelist">
-</ul>
+</ul><br/>
 <hr>
 <p><center></p>
 </body></html>
