--- a/sbapp/share/flasher.html
+++ b/sbapp/share/flasher.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <span class="logo">RNode Flasher</span>
-<p><center><span class="menu"><a href="index.html">Start</a> | <a href="flasher.html">RNode Flasher</a> | <a href="pkgs.html">Software</a> | <a href="guides.html">Guides</a></span></center></p><hr>
+<p><center><span class="menu"><a href="index.html">Start</a> | <a href="pkgs.html">Software</a> | <a href="flasher.html">RNode Flasher</a> | <a href="guides.html">Guides</a></span></center></p><hr>
 <br/>Sideband includes a copy of the web-based RNode Flasher developed by <a href="https://github.com/liamcottle/rnode-flasher">Liam Cottle</a>. You can use this flasher to install and provision the RNode firmware on any compatible boards.<br/>
 <br/>
 <b>Please note!</b> Your browser must support Web-USB for this to work.<br/>
