--- a/sbapp/share/guides.html
+++ b/sbapp/share/guides.html
@@ -14,8 +14,8 @@ Welcome to the <b>Guide Section</b>!<br/><br/>From here, you can browse or downl
 
 <ul>
   <li><a href="./mirrors/reticulum.network/manual/index.html">Browse the Reticulum Manual</a></li>
-  <li><a href="./mirrors/Reticulum_Manual.pdf">Download the Reticulum Manual in PDF format</a></li>
-  <li><a href="./mirrors/Reticulum_Manual.epub">Download the Reticulum Manual in EPUB format</a></li>
+  <li><a href="./mirrors/reticulum.network/manual/Reticulum Manual.pdf">Download the Reticulum Manual in PDF format</a></li>
+  <li><a href="./mirrors/reticulum.network/manual/Reticulum Manual.epub">Download the Reticulum Manual in EPUB format</a></li>
   <li><a href="./mirrors/reticulum.network/index.html">Browse a local copy of the Reticulum website</a></li>
 </ul>
 <br/>
